Improve Record.equals()